# eth-netlink

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
conf/: ethnetlink.ini
doxygen/: doxygen.cfg.in
include/: addr.h  internal.h  link.h  main.h  netlink.h  print.h  utils.h  vt_bitfield.h  vt_hexdump.h
src/: addr.c  internal.h  link.c  main.c  main.h  mainold.c  netlink.c  print.c  utils.c  vt_bitfield.h  vt_hexdump.h
test/: bitfield_dump.c  fw.c  hexdump.c  netnsid.c  pr_func.c  pr_func2.c  va_chr.c
